# pygotm

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  _diag_papa.py  _diag_papa2.py  _diag_papa3.py  _diag_papa4.py  _extract_scores.py  pygotm-conda-env.yml  pyproject.toml
.codex/: config.toml
.codex/agents/: shell-runner.toml
.github/workflows/: ci.yml  docs.yml  full-validation.yml  tests.yml
docs/: _validation_staging.py  build_docs.py  conf.py  index.rst  refresh_intersphinx.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_static/: custom.css
docs/api/: airsea.rst  cvmix.rst  execution.rst  extras.rst  fabm.rst  gotm.rst  input.rst  meanflow.rst  stokes_drift.rst  turbulence.rst  util.rst  validation.rst
docs/figures/: build_figures.py
docs/getting_started/: citations.rst  configuration.rst  installation.rst  interfaces.rst  introduction.rst  quickstart.rst  serve.rst  stability.rst
docs/physics/: biogeochemistry.rst  meanflow.rst  overview.rst
docs/user_manual/: dynamics.rst  equation_of_state.rst  index.rst  initial_conditions.rst  light_extinction.rst  location_time_grid.rst  output.rst  surface_forcing.rst  turbulence.rst
docs/validation/: overview.rst  test_cases.rst
scripts/: generate_gotm_saar_data.py
src/pygotm/: __init__.py  __main__.py  arrays.py  constants.py  driver.py  errors.py  fields.py  progress.py  schema.py  taichi_typing.py  validate.py
src/pygotm/airsea/: __init__.py  airsea.py  airsea_fluxes.py  airsea_variables.py  albedo_water.py  fairall.py  humidity.py  kondo.py  longwave_radiation.py  shortwave_radiation.py  solar_zenith_angle.py
src/pygotm/citations/: LICENSE  __init__.py  extractor.py  pygotm.bib
src/pygotm/config/: __init__.py  pygotm_conf.py  runtime.py  settings.py
src/pygotm/cvmix/: __init__.py  gotm_cvmix.py
src/pygotm/execution/: __init__.py  benchmark.py
src/pygotm/extras/: __init__.py
src/pygotm/fabm/: __init__.py  config.py  coupling.py  engine.py  fabm_loop.py  gotm_fabm.py  gotm_fabm_input.py  state.py  trajectory.py
src/pygotm/gotm/: __init__.py  cmdline.py  (+13 more)
tests/: conftest.py  dataset_assertions.py  taichi_helpers.py  test_cli.py  test_constants.py  test_driver.py  test_fields.py  test_fortran_translation_inventory.py  test_numba_policy.py  test_packaging_metadata.py  test_taichi_annotation_regressions.py  test_version_consistency.py  turbulence_model_analysis_reference.py  type_helpers.py
tests/airsea/: __init__.py  test_airsea.py  test_airsea_fluxes.py  test_airsea_variables.py  test_albedo_water.py  test_fairall.py  test_humidity.py  test_kondo.py  test_longwave_radiation.py  test_shortwave_radiation.py  test_solar_zenith_angle.py
tests/cite/: test_database.py  test_extractor.py
tests/config/: test_pygotm_conf.py  test_runtime.py  test_settings.py
tests/cvmix/: __init__.py  test_gotm_cvmix.py
tests/docs/: test_build_docs.py  test_validation_staging.py
tests/execution/: __init__.py  test_benchmark.py
tests/fabm/: __init__.py  test_architecture_guards.py  test_config.py  test_coupling.py  test_engine.py  test_fabm_loop.py  test_gotm_fabm.py  test_gotm_fabm_input.py
tests/fixtures/: __init__.py
tests/gotm/: __init__.py  test_cmdline.py  test_diagnostics.py  test_gotm.py  test_main.py  test_print_version.py  test_register_all_variables.py  test_runtime_containers.py  test_time_loop.py
tests/icethm/: test_basal_melt.py  test_conservation.py  test_icethm_constants.py  test_icethm_driver.py  test_lebedev.py  test_mylake.py  test_simple.py  test_winton.py
tests/input/: test_input.py  test_input_netcdf.py
tests/integration/: test_gotm_cases.py  test_output_attrs.py  test_run_progress.py
tests/meanflow/: __init__.py  test_coriolis.py  test_external_pressure.py  test_friction.py  test_internal_pressure.py  test_meanflow.py  test_salinity.py  test_shear.py  test_stratification.py  test_temperature.py  test_uequation.py  test_updategrid.py  test_vequation.py  test_wequation.py
tests/observations/: test_analytical_profile.py  test_const_nns.py  test_const_nnt.py  test_observations.py
tests/schema/: test_config_schema.py  test_output_schema.py
tests/serve/: test_daemon_error_handling.py  test_daemon_protocol.py  test_daemon_run.py  test_daemon_shutdown.py
tests/stokes_drift/: __init__.py  test_stokes_drift.py  test_stokes_drift_exp.py  test_stokes_drift_theory.py
tests/turbulence/: __init__.py  test_algebraiclength.py  test_alpha_mnb.py  test_cmue_a.py  test_cmue_b.py  test_cmue_c.py  test_cmue_d.py  test_cmue_d_h15.py  test_cmue_ma.py  test_cmue_sg.py  test_compute_cpsi3.py  test_compute_rist.py  test_dissipationeq.py  test_epsbalgebraic.py  test_fk_craig.py  test_genericeq.py  test_gotm_lib_version.py  test_internal_wave.py  test_kbalgebraic.py  test_kbeq.py  test_lengthscaleeq.py  test_omegaeq.py  test_potentialml.py  test_production.py  test_q2over2eq.py  test_r_ratio.py  test_tkealgebraic.py  test_tkeeq.py  test_turbulence.py  test_variances.py
tests/util/: test_adv_center.py  test_compilation.py  test_convert_fluxes.py  test_density.py  test_diff_center.py  test_diff_face.py  test_gotm_version.py  test_gridinterpol.py  test_gsw_salinity.py  test_lagrange.py  test_ode_solvers.py  test_ode_solvers_template.py  test_run_metadata.py  test_time.py  test_tridiagonal.py  test_util.py
tests/validation/: test_benchmark.py  test_compare.py  test_frechet.py  test_hardware.py  test_parallel.py  test_report.py  test_report_json.py  test_run_validation.py  test_runner.py  test_tolerances.py  test_validate_reference_cases.py  test_warmup.py
validation/report/: asics_med-gotm.html  blacksea-gotm.html  channel-gotm.html  couette-gotm.html  entrainment-gotm.html  estuary-gotm.html  flex-gotm.html  lago_maggiore-gotm.html  langmuir-gotm.html  liverpool_bay-gotm.html  medsea_west-gotm.html  nns_annual-gotm.html  nns_seasonal-gotm.html  ows_papa-gotm.html  plume-gotm.html  report.html  report.json  reynolds-gotm.html  rouse-gotm.html  seagrass-gotm.html  wave_breaking-gotm.html
(+308 files in other folders)
