[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygotm"
version = "0.1.0"
description = "Python reimplementation of GOTM using Numba — CPU-accelerated 1D ocean turbulence model"
license = {text = "GPL-2.0"}
requires-python = ">=3.12"
dependencies = [
    "numba>=0.59",
    "numpy>=1.26",
    "scipy>=1.12",
    "xarray>=2024.1",
    "netcdf4>=1.6",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pydantic>=2.6",
    "nicegui>=1.4",
    "plotly>=5.19",
    "click>=8.1",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "gsw>=3.6.0",
    "dask[distributed]>=2024.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "anyio>=4.3",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
]

[project.scripts]
pygotm = "pygotm.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pygotm"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    # Third-party GOTM reference-case scripts — not pyGOTM source code.
    "validation/reference",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
# LaTeX formulas in docstrings; wrapping would break mathematical readability.
"src/pygotm/airsea/airsea_variables.py" = ["E501"]
"src/pygotm/util/diff_center.py" = ["E501"]
"src/pygotm/util/ode_solvers.py" = ["E501"]
"src/pygotm/util/ode_solvers_template.py" = ["E501"]
"src/pygotm/util/tridiagonal.py" = ["E501"]
# Matplotlib figure code with embedded LaTeX annotation strings.
"docs/figures/build_figures.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "meanflow.*",
    "type_helpers",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_subclassing_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-m 'not slow'"
markers = [
    "slow: full-run case validation against Fortran GOTM reference (run explicitly with -m slow)",
]
